# keystroke

./: Cargo.toml  README.md  flake.nix  summary.md
src/: app.rs  main.rs  tray.rs
src/compositor/: hyprland.rs  mod.rs  niri.rs  sway.rs
src/config/: mod.rs
src/input/: device.rs  keymap.rs  layout.rs  listener.rs  mod.rs  xkb.rs
src/ui/: bubble.rs  display.rs  drag.rs  launcher.rs  mod.rs  settings.rs  window.rs
style/: launcher.css  overlay.css  settings.css
